# scientific-marketing-personalized-attribution-hte

./: .gitignore  LICENSE  README.md  README.zh.md  llms.txt  pyproject.toml
.claude/skills/frontend-design/: SKILL.md
.claude/skills/sm-causal-personalization/: SKILL.md
.claude/skills/sm-causal-personalization/examples/: aurora-airpurifier-category-config.json  ax3-romania-config.json  fit5pro-hungary-config.json  fit5pro-hungary-zh-config.json  fit5pro_zh_redesign.html  huawei-romania-consumer-portfolio-config.json  sample-sku-en-config.json  sample-sku-zh-config.json
.github/workflows/: broken-links.yml  validate.yml
docs/: category-portfolio-diagnostic.DESIGN.md
docs/superpowers/plans/: 2026-07-04-interactive-dashboard-migration.md
docs/superpowers/specs/: 2026-07-04-interactive-dashboard-migration-design.md
scripts/: run_all_checks.py
skills/audience-activation/: SKILL.md
skills/audience-activation/examples/: hungary-cycling-input.json  hungary-cycling-output.md
skills/audience-activation/references/: channel-catalog.json  roi-scoring.md
skills/audience-activation/scripts/: generate_activation_plan.py  validate_activation_plan.py
skills/audience-activation/templates/: activation-report-template.md
tests/: test_audience_rendering.py  test_audience_schema.py  test_causal_scripts.py  test_dashboard_data.py  test_dashboard_render.py  test_generate_activation_plan.py  test_generate_report.py  test_hte_investment_core.py  test_investment_charts.py  test_investment_dashboard_data.py  test_investment_engine.py  test_investment_rendering.py  test_validate_activation_plan.py
(+44 files in other folders)
